# test-package

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/: issue_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/github-sync/: action.yml  github-sync.sh
.github/workflows/: codeql.yml  dev.yml  dev_badges.yml  main.yml  main_pr_closed.yml  main_pr_opened.yml  rc_bump.yml  release.yml  repo-sync.yml  staging.yml  subdev.yml  sync-repo.yml  workflow-check.yml  workflow-chk.yml  workflow_dispatch.yml
docs/: index.md
docs/content/: auto_parameters_example.ipynb  path_adjuster_example.ipynb  set_parameters_example.ipynb  test_nb copy.ipynb
docs/content/data_dict/: core_layer_dict.csv  core_layer_dict.md  faculty_dict.csv  solid_layer_dict.md  student_dict.csv
docs/overrides/: main.html
docs/overrides/stylesheets/: pandas-dataframe.css
src/datax/: __init__.py
src/datax/utils/: __init__.py
src/datax/utils/deployment_helper/: __init__.py
src/datax/utils/deployment_helper/abstract_class/: __init__.py  common.py  conf_file_reader.py
src/datax/utils/deployment_helper/converter/: __init__.py  date_adjuster.py  log4j4py.py  log4j_handler.py  path_adjuster.py
src/datax/utils/deployment_helper/decorator/: __init__.py  auto_parameters.py  dynamic_endpoint.py  set_parameters.py
src/datax/utils/deployment_helper/entrypoint/: __init__.py  common.py  parser.py
src/datax/utils/deployment_helper/utils/: __init__.py  path_finder.py
src/datax/utils/deployment_helper/validation/: arguments.py  common.py  drift_endpoint.py  job_launcher_endpoint.py  profiler_endpoint.py  super_layer_endpoint.py
tests/: __init__.py
tests/datax/utils/deployment_helper/: __init__.py
tests/datax/utils/deployment_helper/abstract_class/: __init__.py  test_common.py  test_conf_file_reader.py
tests/datax/utils/deployment_helper/converter/: __init__.py  test_date_adjuster.py  test_path_adjuster.py
tests/datax/utils/deployment_helper/decorator/: __init__.py  test_auto_parameters.py  test_dynamic_endpoint.py  test_dynamic_endpoint_caller.py  test_integration_auto_parameters.py  test_integration_set_parameters.py  test_set_parameters.py
tests/datax/utils/deployment_helper/dummy_test/: __init__.py  test_dummy.py
tests/datax/utils/deployment_helper/entrypoint/: __init__.py  test_common.py  test_parser.py
tests/datax/utils/deployment_helper/validation/: __init__.py  test_drift_endpoint.py  test_job_launcher_endpoint.py  test_profiler_endpoint.py  test_super_layer_endpoint.py  test_validation_common.py
tests/deployment_helper/: __init__.py
tests/deployment_helper/abstract_class/: test_common.py
tests/deployment_helper/decorator/: test_dynamic_endpoint.py  test_integration_set_parameters.py
tests/resources/: people_schema.json
tests/resources/conf/: file.txt
tests/resources/conf_files/: app.yml.j2  logger.json  logger.json.j2
tests/resources/test_common/test_pipeline/TestABCModule/: spark.yml
tests/resources/test_common/test_pipeline/TestABCModule/audit/: deequ.yml
tests/resources/test_common/test_pipeline/TestABCModule/sensor/: sensor_result_table.yml
tests/resources/test_common/test_pipeline/TestABCModuleWO/: app.yml
tests/resources/test_date_adjuster/test_pipeline/TestABCModuleA/: app.yml
tests/resources/test_date_adjuster/test_pipeline/TestABCModuleB/: app.yml
tests/resources/test_date_adjuster/test_pipeline/TestABCModuleCNoOffset/: app.yml
tests/resources/test_path_adjuster/conf/: app.yml  spark.yml
tests/resources/test_path_adjuster/test_pipeline/TestABCModule/: app.yml
tests/resources/test_path_adjuster/test_pipeline/TestABCModule2/: app.yml
tests/resources/test_path_adjuster/test_pipeline/TestRecursive/: app.yml
tests/resources/test_path_adjuster/workflow/TestRecursive/data_profiling/deequ/: example_analyzer.yml
tests/resources/test_pipeline/test_conf_file/: Test_ABC_Module.yml
tests/resources/test_pipeline/test_conf_file_2/: Test_ABC_Module_2.yaml
